--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "@ngrx/effects": "^8.2.0",
+    "@ngrx/entity": "^8.2.0",
+    "@ngrx/store": "^8.2.0",
     "cordova-android": "8.0.0",
     "core-js": "^2.5.4",
+    "immutable": "^4.0.0-rc.12",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
